--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@originjs/vite-plugin-federation": "^1.3.9",
     "@quasar/cli": "^2.4.1",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
