--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@originjs/vite-plugin-federation": "^1.3.9",
     "@quasar/cli": "^2.4.1",
     "@quasar/extras": "^1.16.4",
+    "@vueuse/components": "^12.5.0",
+    "@vueuse/core": "^12.5.0",
     "axios": "^1.2.1",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
